# server/routes/user.js
@@ -5,4 +5,13 @@ const User = require('../controllers/user');
 //  get user
 router.get('/', User.getUser);
 
+// Update profile details
+router.put('/update', User.updateProfileDetails);
+
+// Update password
+router.put('/updatePassword', User.updatePassword);
+
+// Delete Account
+router.delete('/deleteAccount', User.deleteAccount);
+
 module.exports = router;
